--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       >
         <div class="container-xxl">
           <a class="navbar-brand" href="#page-top">
-            <img alt="logo" src="/assets/img/logo.png" width="170" />
+            <img alt="logo" src="/assets/img/logo-hoho.png" width="170" />
           </a>
           <button
             class="navbar-toggler text-uppercase font-weight-bold text-white rounded"
